Revise description of Liam Carpellos attributes
Updated the description of Liam Carpellos characteristics.

--- a/wanted.html
+++ b/wanted.html
@@ -4,6 +4,6 @@
 </head>
  <body>
    <h1>LIAM CARPELLO, RECHERCHÉ MORT OU VIF</h1>
-   <p>Je suis liam carpello, j'ai douze ans, mon anniversaire est le premier de mars. Je mesasure 172cm, j'ai les cheveux (mi)longs, bruns et raides, et les yeux bleu. Je suis fort et grand. je ne porte pas des lunettes. Je suis tojours trés travailleur et plutot intelligent. je peux être un peu charmant mais je ne suis jamais trés stupide ou branché.</p>
+   <p>Je suis liam carpello, j'ai douze ans, mon anniversaire est le premier de mars. Je mesasure 172cm, j'ai les cheveux (mi)longs, bruns et raides, et les yeux bleu. Je suis fort et grand. je ne porte pas des lunettes. Je suis tojours trés travailleux et plutot intelligent. je peux être un peu charmant aussi paresseux mais je ne suis jamais trés stupide ou branché.</p>
  </body> 
 </html>
