Update description in wanted.html

--- a/wanted.html
+++ b/wanted.html
@@ -4,6 +4,6 @@
 </head>
  <body>
    <h1>LIAM CARPELLO, RECHERCHÉ MORT OU VIF</h1>
-   <p>Je suis liam carpello, j'ai douze ans, mon anniversaire est le premier de mars. Je mesasure 172cm, j'ai les cheveux (mi)longs, bruns et raides, et les yeux bleu. Je suis fort et grand. je ne porte pas des lunettes. Je suis tojours trés travailleux et plutot intelligent. je peux être un peu charmant aussi paresseux mais je suis raremant trop stupide ou branché. Je suis souvent sympa et gentil. Je voudrais être un pentester.J'adore francais, pentesting et prof lejune parce ils sont tout amusant aussi mon prof est le meilleur.</p>
+   <p>Je suis liam carpello, j'ai douze ans, mon anniversaire est le premier de mars. Je mesasure 172cm, j'ai les cheveux (mi)longs, bruns et raides, et les yeux bleu.Je ne porte pas de maquillage. Je suis fort et grand. je ne porte pas des lunettes. Je suis tojours trés travailleux et plutot intelligent. je peux être un peu charmant aussi paresseux mais je suis raremant trop stupide ou branché. Je suis souvent sympa et gentil. Je voudrais être un pentester.J'adore francais, pentesting et prof lejune parce ils sont tout amusant aussi mon prof est le meilleur.</p>
  </body> 
 </html>
