--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <body>
 <h1>Directory</h1>
   <p>Hi, this is the directory page for my homework, here you can navigate files, [insert directory use], and much more!</p>
+    <ul>
+      <li><a href="https://liamcostello308.github.io/LiamHomework/wanted.html">wanted page</a></li>
+    </ul>
 
     
   </body>
