--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <p>Hi, this is the directory page for my homework, here you can navigate files, [insert directory use], and much more!</p>
     <ul>
       <li><a href="https://liamcostello308.github.io/LiamHomework/wanted.html">wanted page</a></li>
+      <li><a href="https://liamcostello308.github.io/LiamHomework/male.html">jacques page</a></li>
     </ul>
 
     
