Enhance description of Chloé in female.html
Added additional physical description for Chloé.

--- a/female.html
+++ b/female.html
@@ -1,11 +1,11 @@
-<html>
+e<html>
 <head>
   <title>chloé</title>
 </head>
   <body>
 <h1>chloé la chat</h1>
-    <p>elle est chloé et elle est un chat, jacques chat(chloé) est une *tueur* de souris, elle mesure 50cm, de taille moyenne. elle a sept ans en plus son anniversaire est le premier mars. </p>
-    
+    <p>elle est chloé et elle est un chat, jacques chat(chloé) est une *tueur* de souris, elle mesure 50cm, de taille moyenne. elle a sept ans en plus son anniversaire est le premier mars. elle a les cheveux marrones, elle a les yeux bleues, elle est mince, </p>
+    <!--https:/edugrowth.org.au/speaker/graeme-young/-->
   </body>
   
 </html>
