--- a/male.html
+++ b/male.html
@@ -5,7 +5,7 @@
   <body>
     <h1>Jacques</h1>
     <h3>Jacques est un restaurateur rival il voudrait être le meilleur*</h3>
-    <p>il est jacques, son anniversaire est le huit fevrièr,il a cinquant ans. il ne a pas les cheveux, il a les yeux marron, il porte des lunnetes, mais il ne a pas de maquillage.il mesure 152cm, il est assez petit. il a un chat qui s'appelle chloè et il a un frère qui s'appelle gusto (oui ils sont frères dans mon "squeakuel").il est antipa, vraiment amtipa pourtaint trop paresseux mais, il peux est vraiment intelligent en plus il n'est jamais gentil. il était gentil aussi sympa cependant il était parfois stupidé.</p>
+    <p>Il s'appelle Jacques, son anniversaire est le huit février, il a cinquante ans. Il n’a pas de cheveux, il a les yeux marron, il porte des lunettes, mais il n'a pas de maquillage. Il mesure 152cm, il est assez petit. Il a un chat qui s'appelle Chloé et il a un frère qui s'appelle Gusto (oui ils sont frères dans mon "squeakuel"). Il est antipathique, vraiment antipathique pourtant trop paresseux mais, il peut être vraiment intelligent en plus il n'est jamais gentil. Il était gentil aussi sympa cependant il était parfois stupide.</p>
   </body>
   
 </html>
