Correct text and grammar in female.html

--- a/female.html
+++ b/female.html
@@ -4,7 +4,7 @@ e<html>
 </head>
   <body>
 <h1>chloé la chat</h1>
-    <p>elle est chloé et elle n'est jamais un chat *ordinaire*, jacques chat(chloé) est une *tueur* de souris, elle mesure 50cm, de taille moyenne. elle a sept ans en plus son anniversaire est le premier mars. elle a les cheveux marrones, elle a les yeux bleues, elle n'est pas gros, mais grande, elle est souvent vraiment intelligente et un peu travailleuse, elle est rarement un peu sympa ou  gentil, en plus elle voudrait toujours être *le roi des animaux*, elle était un vraiment bien chat, aussi un peu trop gros.</p>
+    <p>Elle est Chloé et elle n'est jamais un chat *ordinaire*, jacques chat(Chloé) est une *tueuse* de souris, elle mesure 50cm, de taille moyenne. Elle a sept ans en plus son anniversaire est le premier mars. Elle est marron, elle a les yeux bleus, elle n'est pas grosse, mais grande, elle est souvent vraiment intelligente et un peu travailleuse, elle est rarement un peu sympa ou  gentil, en plus elle voudrait toujours être *le raine des animaux*, elle était un vraiment bien chat, aussi un peu trop grosse.</p>
     <!--https:/edugrowth.org.au/speaker/graeme-young/-->
   </body>
   
