Update directory page description with source note

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
   <body>
 <h1>Directory</h1>
-  <p>Hi, this is the directory page for my homework, here you can navigate files, [insert directory use], and much more!</p>
+  <p>Hi, this is the directory page for my homework, here you can navigate files, [insert directory use], and much more!( anything in asteriks"*blahblahblah*" means i used an outside source because i was not sure of the use.)</p>
     <ul>
       <li><a href="https://liamcostello308.github.io/LiamHomework/wanted.html">wanted page</a></li>
       <li><a href="https://liamcostello308.github.io/LiamHomework/male.html">jacques' page</a></li>
