--- a/male.html
+++ b/male.html
@@ -5,6 +5,7 @@
   <body>
     <h1>Jacques</h1>
     <h3>Jacques est un restaurateur rival il voudrait être le meilleur*</h3>
+    <img src="42af2fa1-9016-46e5-9612-32474aa7ef68.jpeg">
     <p>Il s'appelle Jacques, son anniversaire est le huit février, il a cinquante ans. Il n’a pas de cheveux, il a les yeux marron, il porte des lunettes, mais il n'a pas de maquillage. Il mesure 152cm, il est assez petit. Il a un chat qui s'appelle Chloé et il a un frère qui s'appelle Gusto (oui ils sont frères dans mon "squeakuel"). Il est antipathique, vraiment antipathique pourtant trop paresseux mais, il peut être vraiment intelligent en plus il n'est jamais gentil. Il était gentil aussi sympa cependant il était parfois stupide.</p>
   </body>
   
