Add styles to format image in male.html
Added CSS styles for image alignment and sizing.

--- a/male.html
+++ b/male.html
@@ -3,6 +3,16 @@
   <title>jacques</title>
 </head>
   <body>
+    <style>
+    img{
+      align: center;
+       height: 200px;
+      width: 200px;
+    
+    }
+      
+    </style>
+
     <h1>Jacques</h1>
     <h3>Jacques est un restaurateur rival il voudrait être le meilleur*</h3>
     <img src="42af2fa1-9016-46e5-9612-32474aa7ef68.jpeg">
