--- a/wanted.html
+++ b/wanted.html
@@ -5,7 +5,7 @@
  <body>
    <style>
     img{
-      align: center;
+      justify-content: center;
        height: 200px;
       width: 200px;
     
