Change image styling to use flex display

--- a/wanted.html
+++ b/wanted.html
@@ -5,7 +5,7 @@
  <body>
    <style>
     img{
-      justify-content: center;
+      display: flex;
        height: 200px;
       width: 200px;
     
