Center images in wanted.html
Added centering styles for images in wanted.html

--- a/wanted.html
+++ b/wanted.html
@@ -5,7 +5,9 @@
  <body>
    <style>
     img{
-      display: flex;
+        display: flex;
+  justify-content: center;
+  align-items: center;
        height: 200px;
       width: 200px;
     
