--- a/wanted.html
+++ b/wanted.html
@@ -5,9 +5,7 @@
  <body>
    <style>
     img{
-        display: flex;
-  justify-content: center;
-  align-items: center;
+        float: center;
        height: 200px;
       width: 200px;
     
