Center poster using flexbox layout

--- a/wanted.html
+++ b/wanted.html
@@ -5,7 +5,8 @@
  <body>
    <style>
     .poster{
-        margin: center;
+        display: flex; 
+      justify-content: center;
        height: 200px;
       width: 200px;
     
