Add flexbox styling to poster div in wanted.html

--- a/wanted.html
+++ b/wanted.html
@@ -5,12 +5,14 @@
  <body>
    <style>
     .poster{ 
+      display: flex; 
+      justify-content: center;
        height: 200px;
        width: 200px;
     }
       
     </style>
-<div>
+<div class="poster">
    <h1>LIAM CARPELLO, RECHERCHÉ MORT OU VIF</h1>
    <img src="Copilot_20260210_115308.png">
   <p>Je suis liam carpello, j'ai douze ans, mon anniversaire est le premier de mars. Je mesure 172cm, j'ai les cheveux (mi)longs, bruns et raides, et les yeux bleus. Je ne porte pas de maquillage. Je suis fort et grand. je ne porte pas des lunettes. Je suis tojours trés travailleur et plutôt intelligent. je peux être un peu charmant aussi paresseux, mais je suis raremant trop stupide ou branché. Je suis souvent sympa et gentil. Je voudrais être un pentester.J'adore francais, pentesting et prof lejeune parce ils sont tout amusant aussi mon prof est le meilleur.</p>
