--- a/wanted.html
+++ b/wanted.html
@@ -6,6 +6,7 @@
    <style>
      body{
       background-image: url("Copilot_20260210_115308.png");
+       background-repeat: no-repeat;
        
      }
     
