--- a/wanted.html
+++ b/wanted.html
@@ -7,6 +7,8 @@
      body{
       background-image: url("Copilot_20260210_115308.png");
        background-repeat: no-repeat;
+       height: 100vh
+       width: 100vw
        
      }
     
