--- a/wanted.html
+++ b/wanted.html
@@ -5,7 +5,8 @@
     body {
       background-image: url("Copilot_20260210_115308.png");
       background-repeat: no-repeat;
-      background-size: contain; /* keeps full image visible */
+      background-size: 100% auto;
+ /* keeps full image visible */
       background-position: center; /* centers the image */
       background-attachment: fixed;
       margin: 0;
