--- a/wanted.html
+++ b/wanted.html
@@ -5,7 +5,9 @@
     body {
       background-image: url("Copilot_20260210_115308.png");
       background-repeat: no-repeat;
-      background-size: 100% auto;
+      background-size: contain;
+      background-color: black; /* fills empty space */
+
  /* keeps full image visible */
       background-position: center; /* centers the image */
       background-attachment: fixed;
