--- a/wanted.html
+++ b/wanted.html
@@ -16,14 +16,21 @@
       height: 100vh;
       width: 100vw;
     }
+    .info{
+    display: flex;
+  justify-content: center;
+  align-items: center;
+      
+    }
   </style>
 </head>
 
 <body>
+  <div class="info">
   <h1>LIAM CARPELLO, RECHERCHÉ MORT OU VIF</h1>
 
   <h3>
     Je suis Liam Carpello, j'ai douze ans, mon anniversaire est le premier de mars...
-  </h3>
+  </h3></div>
 </body>
 </html>
