--- a/wanted.html
+++ b/wanted.html
@@ -17,11 +17,8 @@
       width: 100vw;
     }
     .info{
-    display: flex;
-  justify-content: center;
-  align-items: center;
-      height: 500px;
-  border: 3px red;
+    font-family: arial;
+    font-color: green;
       
     }
   </style>
