--- a/wanted.html
+++ b/wanted.html
@@ -3,22 +3,14 @@
   <title>WANTED PAGE</title>
   <style>
     body {
-      background-image: url("Copilot_20260210_115308.png");
-      background-repeat: no-repeat;
       background-size: contain;
-      background-color: black; /* fills empty space */
-
- /* keeps full image visible */
-      background-position: center; /* centers the image */
-      background-attachment: fixed;
-      margin: 0;
-      padding: 0;
-      height: 100vh;
-      width: 100vw;
+background-position: center top;
+background-repeat: no-repeat;
+background-color: black;
     }
     .info{
     font-family: arial;
-    font-color: green;
+    color: green;
       
     }
   </style>
