--- a/wanted.html
+++ b/wanted.html
@@ -14,11 +14,14 @@
 
     .info {
       font-family: Arial;
-      color: purple;
+      color: blue;
     }
     .bottom{
-     place-items: bottom;
-      color: dark blue;
+         display: grid;
+          justify-items: center;   /* horizontal centering */
+          align-items: end;        /* push to bottom */
+          color: blue;
+          font-family: arial;
       
     }
   </style>
