--- a/wanted.html
+++ b/wanted.html
@@ -14,13 +14,13 @@
 
     .info {
       font-family: Arial;
-      color: black;
+      color: light-blue;
     }
     .bottom{
          display: grid;
           justify-items: center;   /* horizontal centering */
           align-items: end;        /* push to bottom */
-          color: black;
+          color:light-blue;
           font-family: arial;
       
     }
