--- a/wanted.html
+++ b/wanted.html
@@ -20,7 +20,7 @@
          display: grid;
           justify-items: center;   /* horizontal centering */
           align-items: end;        /* push to bottom */
-          color: #006d95
+          color: #006d95;
           font-family: arial;
       
     }
