--- a/female.html
+++ b/female.html
@@ -11,7 +11,7 @@
       background-size: contain;
       background-position: center top;
       background-repeat: no-repeat;
-      background-color: #cfa160;
+      background-color: #8b8b83;
       margin: 0;
       padding: 0;
     }
@@ -35,7 +35,7 @@
   <div class="info">
     <h1>chloé la chat</h1>
      </div>
-  <img src="1f13e4da-0eda-4c38-bba0-c64934f56ff7.jpeg">
+
      <br>
     <br>
     <br>
