--- a/female.html
+++ b/female.html
@@ -18,13 +18,13 @@
 
     .info {
       font-family: Arial;
-      color: #006d95;
+      color: #7aff00;
     }
     .bottom{
          display: grid;
           justify-items: center;   /* horizontal centering */
           align-items: end;        /* push to bottom */
-          color: #006d95;
+          color: #7aff00;
           font-family: arial;
       
     }
