--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 </head>
   <body>
 <h1>Directory</h1>
+    <audio autoplay>
+      <source src="New_Project.mp3" type="audio/mpeg">
+    </audio>
   <p>Hi, this is the directory page for my homework, here you can navigate files, [insert directory use], and much more!( anything in asteriks"*blahblahblah*" means i used an outside source because i was not sure of the use.)</p>
     <ul>
       <li><a href="https://liamcostello308.github.io/LiamHomework/wanted.html">wanted page</a></li>
