--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
   <body>
 <h1>Directory</h1>
-    <audio autoplay>
+    <audio controls autoplay>
   <source src="New_Project.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
