--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<html>
+<!DOCTYPE html>
 <head>
   <title>directory</title>
 </head>
   <body>
 <h1>Directory</h1>
     <audio controls autoplay>
-  <source src="New_Project.mp3" type="audio/mpeg">
+  <source src="New_Project(1).mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
   <p>Hi, this is the directory page for my homework, here you can navigate files, [insert directory use], and much more!( anything in asteriks"*blahblahblah*" means i used an outside source because i was not sure of the use.)</p>
