--- a/index.html
+++ b/index.html
@@ -1,8 +1,30 @@
-<!DOCTYPE html>
+<html>
 <head>
   <title>directory</title>
 </head>
   <body>
+    <style>
+      @keyframes myAnimation {
+  0%   {background-color: red;}
+  25%  {background-color: yellow;}
+  50%  {background-color: blue;}
+  100% {background-color: green;}
+}
+
+body{
+background-color: blue;
+  
+   animation-name: myAnimation;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
+  
+}
+      body{
+            font-family: arial;
+        
+      }
+      
+    </style>
 <h1>Directory</h1>
     <audio controls autoplay>
   <source src="New_Project(1).mp3" type="audio/mpeg">
