--- a/female.html
+++ b/female.html
@@ -67,7 +67,7 @@
     
 
     
-    <p>Elle est Chloé et elle n'est jamais un chat *ordinaire*, jacques chat(Chloé) est une *tueuse* de souris, elle mesure 50cm, de taille moyenne. Elle a sept ans en plus son anniversaire est le premier mars. Elle est marron, elle a les yeux bleus, elle n'est pas grosse, mais grande, elle est souvent vraiment intelligente et un peu travailleuse, elle est rarement un peu sympa ou  gentil, en plus elle voudrait toujours être *le raine des animaux*, elle était un vraiment bien chat, aussi un peu trop grosse.</p>
+    <p>Elle est Chloé et elle n'est jamais un chat *ordinaire*, jacques chat(Chloé) est une *tueuse* de souris, elle mesure 50cm, de taille moyenne. Elle a sept ans en plus son anniversaire est le premier mars. Elle est marron, elle a les yeux bleus, elle n'est pas grosse, mais grande, elle est souvent vraiment intelligente et un peu travailleuse, elle est rarement un peu sympa ou gentille, en plus elle voudrait toujours être *le reine des animaux*, elle était un vraiment bien chat, aussi un peu trop grosse.</p>
     <!--https:/edugrowth.org.au/speaker/graeme-young/--></div>
   </body>
   
