--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@ Your browser does not support the audio element.
       <li><a href="https://liamcostello308.github.io/LiamHomework/male.html">jacques' page</a></li>
       <li><a href="https://liamcostello308.github.io/LiamHomework/female.html">chloé's page</a></li>
     </ul>
+    <input type="numbers">wanted marks</input>
+    <input type="numbers">male marks</input>
+    <input type="numbers">female marks</input>
 
     
   </body>
