--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@ Your browser does not support the audio element.
       <li><a href="https://liamcostello308.github.io/LiamHomework/male.html">jacques' page</a></li>
       <li><a href="https://liamcostello308.github.io/LiamHomework/female.html">chloé's page</a></li>
     </ul>
-    <input type="numbers">wanted marks</input><br>
-    <input type="numbers">male marks</input><br>
-    <input type="numbers">female marks</input><br>
-    <p>total: 100% please?🥺🥺🥺</p>
+    <input type="numbers"> Wanted marks</input><br>
+    <input type="numbers"> Male marks</input><br>
+    <input type="numbers"> Female marks</input><br>
+    <p>Total: 100% please?🥺🥺🥺</p>
 
     
   </body>
