--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@ Your browser does not support the audio element.
     <input type="numbers"> Wanted marks</input><br>
     <input type="numbers"> Male marks</input><br>
     <input type="numbers"> Female marks</input><br>
-    <p>Total: 100% please?🥺🥺🥺
-    also, alfie didn't listen to your AI assembly😉</p>
+    <p>Total: 100% please?🥺🥺🥺</p>
+    <p>also, alfie didn't listen to your AI assembly😉</p>
 
     
   </body>
