--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ background-color: blue;
   <source src="New_Project (2).mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
-  <p>Hi, this is the directory page for my homework, here you can navigate files, [insert directory use], and much more!( anything in asteriks"*blahblahblah*" means i used an outside source because i was not sure of the use.)</p>
+  <p>Hi, this is the directory page for my homework, here you can navigate files, [insert directory use], and much more!( anything in asteriks means I used an outside source because I was not sure of the use.)</p>
     <ul>
       <li><a href="https://liamcostello308.github.io/LiamHomework/wanted.html">wanted page</a></li>
       <li><a href="https://liamcostello308.github.io/LiamHomework/male.html">jacques' page</a></li>
