--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   0%   {background-color: red;}
   25%  {background-color: yellow;}
   50%  {background-color: blue;}
-  100% {background-color: green;}
+  75% {background-color: green;}
+  100% {background-color: purple}
 }
 
 body{
