--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <title>directory</title>
 </head>
   <body>
-    <!--https:/edugrowth.org.au/speaker/graeme-young/-->
+    <!-- hi, if you see this, I just wanted you to know, there is personal info out about you, not very personal, but still, from your friendly neighbourhood liam! https:/edugrowth.org.au/speaker/graeme-young/-->
+
     <style>
       @keyframes myAnimation {
   0%   {background-color: red;}
@@ -32,6 +33,7 @@ background-color: blue;
   <source src="New_Project (2).mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
+    <!-- hi, if you see this, I just wanted you to know, there is personal info out about you, not very personal, but still. https:/edugrowth.org.au/speaker/graeme-young/-->
   <p>Hi, this is the directory page for my homework, here you can navigate files, [insert directory use], and much more!( anything in asteriks means I used an outside source because I was not sure of the use.)</p>
     <ul>
       <li><a href="https://liamcostello308.github.io/LiamHomework/wanted.html">wanted page</a></li>
